# geojson-generator

./: pyproject.toml
geojson_generator/: main.py
geojson_generator/models/: FeatureCollection.py
